--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>handebol</title>
-</head>
+</head> 
 <body>
-    
+  <footer>
+<h1> imagem </h1>
+<h2>  resgras do jogo </h2>
+
+
+
+  </footer>   
 </body>
 </html>
