--- a/index.html
+++ b/index.html
@@ -8,8 +8,241 @@
 <body>
   <footer>
 <h1> imagem </h1>
-<h2>  resgras do jogo </h2>
+<h2>  resgra</h2>
+"O handebol foi criado em 1919, na Alemanha.
 
+O esporte estreou nas Olimpíadas em 1936, nos Jogos de Berlim.
+
+Uma equipe de handebol é formada por sete jogadores, sendo um goleiro.
+
+Uma partida de handebol dura dois tempos de 30 minutos.
+
+A medida oficial de uma quadra de handebol é 40 m x 20 m.
+
+Apenas o goleiro pode encostar o pé na bola e somente durante a defesa.
+
+O handebol adaptado para cadeirantes teve início no Brasil em 1993.
+
+O primeiro campeonato mundial de handebol ocorreu em 1938.
+
+Os países com maior tradição no handebol estão localizados na Europa.
+
+O Brasil foi campeão mundial de handebol feminino em 2013.
+
+Não pare agora... Tem mais depois da publicidade ;)
+
+História do handebol
+As atividades esportivas que envolvem jogos com bola são as mais antigas da humanidade. Entre os primeiros jogos semelhantes ao handebol, de que se tem conhecimento, estava a urânia, praticada na Grécia Antiga 2000 a.C., em que uma bola do tamanho de uma maçã era jogada com as mãos, mas sem a presença de traves no gol. A prática grega foi citada na obra Odisseia, de Homero.
+
+Já os romanos praticavam o haspartan, também jogado com as mãos, que utilizava uma bola feita de bexiga de boi, revestida de couro, conhecida como follis.
+
+Na Modernidade, alguns jogos praticados em campo influenciaram a criação do handebol, como o haandbold, criado em 1848 pelo professor dinamarquês Holger Nielsen, e o hazena, desenvolvido pelos tchecos. Há relatos de que, nesse mesmo período, jogos semelhantes eram vivenciados na Irlanda e no Uruguai.
+
+Com a reformulação do jogo Torbal, o professor alemão Karl Schelenz criou o handebol em 1919. No ano seguinte, o esporte foi oficializado pelo diretor da Escola de Educação Física da Alemanha. A primeira partida internacional de handebol foi realizada, em 1925, entre Alemanha e Áustria, na qual a equipe austríaca saiu com a vitória.
+
+O handebol se tornou esporte olímpico em 1934 com sua inclusão no Comitê Olímpico Internacional (COI). Sua estreia nas Olimpíadas aconteceu em Berlim, nos jogos de 1936, na modalidade masculina. Já a partida olímpica feminina iniciou-se em 1976, nos Jogos de Montreal, no Canadá.
+
+Fundamentos do handebol
+A partida é composta por dois períodos de 30 minutos cada, com intervalo de 10 minutos.
+
+São necessárias duas equipes de sete jogadores, sendo que um é o goleiro.
+
+Oficialmente, a quadra deve medir 40 metros de comprimento e 20 metros de largura (40 m x 20 m) e ter piso de madeira ou emborrachado, com duas áreas para goleiro que se localizam a seis metros do gol.
+
+O gol no handebol mede dois metros de altura e três metros de largura (2 m x 3 m).
+
+A bola oficial para a prática do handebol deve ser de couro, e sua massa e tamanho variam conforme os gêneros: a masculina é uma bola maior, medindo entre 58 cm e 60 cm de diâmetro, com massa entre 425 g e 475 g. A feminina tem tamanho entre 54 cm e 56 cm, e massa entre 325 g e 400 g.
+
+Regras do handebol
+
+O goleiro é o único jogador que pode encostar o pé e a perna na bola durante uma partida de handebol. [2]
+Confira especificações gerais do funcionamento da prática esportiva do handebol a seguir:
+
+O ato de um jogador se deslocar quicando a bola é chamado de drible. A mão do jogador deve estar sempre aberta para que tenha um melhor domínio sobre a bola, e, ao contrário do basquetebol, não é permitido conduzir a bola durante o drible. Além disso, o jogador não pode segurar a bola por mais de três segundos ou dar mais de três passos com ela.
+
+O goleiro, dentro de sua área de gol e enquanto pratica uma defesa, é o único jogador que pode encostar o pé na bola. Em qualquer outro caso, a bola deverá ser quicada, arremessada ou recebida com as mãos.
+
+O tronco pode ser utilizado para interromper o andamento do adversário, mas braços e mãos nunca podem ser utilizados.
+
+É permitido tomar a bola do adversário com as mãos abertas, porém arrancar a bola ou agredir o adversário é contra as regras.
+
+O time marca ponto quando a bola ultrapassar totalmente a linha do gol.
+
+Quando a bola cruzar a linha lateral, é cobrado o tiro lateral: o atleta pisa com um pé na linha e, com a bola em mãos, recoloca-a em jogo. Nesse caso, os oponentes devem se localizar a, no mínimo, três metros de distância.
+
+Ao ocorrer qualquer lance irregular, a cobrança é feita no local onde ocorreu a infração. O time adversário pode formar uma barreira, desde que ela se posicione a três metros da cobrança. Uma curiosidade é que as faltas podem ser cobradas sem o apito do árbitro.
+
+São dois árbitros por jogo, auxiliados por um cronometrista e um secretário responsável pela súmula.
+
+O famoso tiro de sete metros é caracterizado pela falta sobre um atacante, quando ele, ao arremessar a bola ao gol, é impedido por uma falta. Para essa cobrança, o árbitro deve apitar, autorizando a jogada. O jogador que executa o tiro deve cuidar para que seus pés não toquem ou ultrapassem a linha de marcação dos sete metros.
+
+Elementos do handebol
+Veja, a seguir, os elementos que compõem o handebol.
+
+Recepção: consiste em técnicas utilizadas para a retenção da bola de maneira correta em diversas situações de jogo. As mãos devem ir de encontro à bola para uma boa recepção. Os tipos de recepção são:
+
+na altura do peito;
+
+acima da cabeça;
+
+alta e lateralmente;
+
+junto ao solo;
+
+com uma das mãos.
+
+Passe: é o elemento básico para a construção do jogo. Podendo ser executado com uma ou as duas mãos, o passe possibilita com que a bola chegue a outro jogador da equipe. Os tipos de passes são caracterizados quanto à distância (curto, médio e longo) e quanto à trajetória. Os passes são divididos em:
+
+Passe direto: o tipo mais rápido, por conta da curta distância e precisão.
+
+Passe picado: aplicado quando se tem um ou mais adversários pela frente.
+
+Passe parabólico: quando a bala passa por cima de um ou mais adversários. Utilizado em contra-ataques ou em passes de longa distância.
+
+Arremesso: é o fundamento principal da partida, pois consiste na finalização da jogada em momento de ataque. Com a aplicação da força, o objetivo do arremesso é atingir o gol a qualquer distância. Características como velocidade, potência e precisão são essenciais para um bom arremesso. Os arremessos são divididos em:
+
+Arremessos simples: são realizados nos limites da linha de tiro livre, em média e longa distância, e podem ser feitos parados ou em movimento.
+
+Arremessos especiais: são realizados no limite da área do gol em curta distância, e exigem dos jogadores força, habilidade e flexibilidade. Nos especiais, os atletas combinam saltos, giros, quedas e rolamentos ao arremessar a bola.
+
+Progressão: consiste nas técnicas que visam a ganhar espaço no momento de posse de bola.
+
+Handebol adaptado
+O handebol adaptado para cadeirantes teve início no Brasil em 1993, na Universidade Estadual de Campinas (Unicamp), por meio de um projeto de extensão universitário. O país é um dos principais responsáveis pelo início da prática adaptada desse esporte.
+
+A modalidade é semelhante à tradicional. A principal diferença é a altura da trave, reduzida para 1,60 m. O handebol adaptado apresenta contribuição significativa no desenvolvimento social e psicofísico de pessoas com deficiência física.
+
+Saiba mais: Paralimpíadas — o evento esportivo dedicado aos atletas com algum tipo de deficiência
+
+Campeonato mundial de handebol
+O primeiro campeonato mundial de handebol ocorreu em 1938 e contou com a participação de apenas quatro equipes: Alemanha, Suécia, Áustria e Dinamarca. A campeã foi a Alemanha.
+
+As equipes com o maior número de medalhas de ouro no campeonato mundial de handebol masculino são: França (6), Suécia (4) e Romênia (4). Já no feminino, os países com mais títulos são: Noruega (4) e Rússia (4).
+
+Nos Jogos Olímpicos, a França é a maior campeã no handebol masculino, com três medalhas de ouro, e a Dinamarca no feminino, também com três títulos.
+
+Os países com maior tradição no handebol são da Europa, sendo eles Alemanha, Espanha, Croácia, Hungria, Polônia, Dinamarca, França, Suécia, Rússia, Noruega e Países Baixos. Fora da Europa, os destaques são Brasil e Argentina.
+
+Importante: A Federação Internacional de Handebol (FHI) é a responsável pelas regras oficiais e institucionais do esporte, bem como pela promoção do campeonato mundial.
+
+Handebol no Brasil
+Os imigrantes trouxeram o handebol para o Brasil no início da década de 1930. Entre esses imigrantes, estavam principalmente os alemães. A primeira federação fundada foi a paulista, em 1940, responsável por promover o I Torneio Aberto de Handebol em 1954, marco que oficializou a modalidade de quadra por aqui.
+
+São Paulo foi o estado onde a prática se desenvolveu. Em 1954, com o Curso Internacional de Santos, o professor francês Auguste Listello apresentou o esporte para professores de outros estados, possibilitando com que o handebol se desenvolvesse em outras regiões brasileiras.
+
+A disseminação do handebol no Brasil se intensificou. a partir de 1971, com a definição do esporte pelo Ministério da Educação (MEC) enquanto uma modalidade dos Jogos Estudantis e Jogos Universitários Brasileiros (JEB e JUB). Com isso, a prática do handebol desenvolveu bases consolidadas nas escolas, tornando-se um importante componente curricular na Educação Física escolar.
+
+
+Seleção Brasileira feminina de handebol comemorando vitória no Pan-Americano.[3]
+Diante das conquistas e bons resultados nos últimos anos, o handebol brasileiro se destacou em nível internacional. A Seleção Brasileira feminina fez história ao conquistar o título inédito para o esporte no campeonato mundial de Belgrado, em 2013, após derrotar a anfitriã Sérvia com um placar de 22 a 20.
+
+Além disso, duas atletas brasileiras já foram eleitas as melhores do mundo no handebol: Alexandra Priscila do Nascimento, em 2012, e Eduarda Amorim, em 2014.
+
+Créditos de imagem
+
+[1] Oleksandr Osipov / Shutterstock
+
+[2] Dziurek / Shutterstock
+
+[3] A.PAES / Shutterstock
+
+ 
+
+Por Lucas Afonso
+Jornalista e profissional de Educação Física
+
+
+Escrito por : Lucas Afonso
+Escritor oficial Brasil Escola
+Gostaria de fazer a referência deste texto em um trabalho escolar ou acadêmico? Veja:
+
+AFONSO, Lucas. "Handebol"; Brasil Escola. Disponível em: https://brasilescola.uol.com.br/educacao-fisica/handebol.htm. Acesso em 14 de agosto de 2023.
+
+De estudante para estudante
+Mande sua pergunta
+
+Artigos Relacionados
+Basquetebol
+Você sabe como funciona o basquetebol? Clique aqui e conheça suas regras e fundamentos. Descubra como e quando surgiu essa prática esportiva.
+Educação Física
+Esporte e Saúde
+Motivos importantes para a prática da atividade física.
+Educação Física
+Esportes Olímpicos (1980-2010)
+Confira aqui a lista dos esportes olímpicos dos jogos de Moscou, em 1980, a Vancouver, em 2010.
+Educação Física
+Futebol Americano
+História e as regras do Futebol Americano.
+Educação Física
+História do Futebol
+Conheça a história do futebol. Veja como surgiu e sua chegada ao Brasil. Saiba como surgiu a Copa do Mundo, quais foram os primeiros estádios e muito mais!
+Educação Física
+Voleibol de Praia
+Histórico do voleibol de praia e regras oficiais.
+Educação Física
+Vôlei
+Clique para saber mais sobre o vôlei. Conheça quando surgiu o esporte, as regras, os fundamentos e o cenário do voleibol no Brasil.
+Educação Física
+
+Atualidades
+O que são big techs?
+Veja mais sobre essas empresas de tecnologia e inovação dominantes no mercado financeiro!
+Curiosidades
+Liberdade de imprensa
+Liberdade de imprensa é a liberdade de um cidadão de ter acesso a informações. Entenda!
+Curiosidades
+Cringe
+A gíria adaptada do inglês é usada para designar alguém que é visto como brega, vergonhoso, ultrapassado e fora de moda.
+Curiosidades
+Neurodiversidade
+Termo cunhado por Judy Singer, é usado para descrever a grande variedade de formas como a mente humana se comporta.
+Biologia
+PL das Fake News
+Conhecida também como PL2660, é um projeto de lei que estabelece mecanismos para a regulamentação das redes sociais no Brasil.
+Curiosidades
+PUBLICIDADE
+
+
+
+Sabia que a Iara pode avaliar sua redação? Envie agora mesmo!
+Conheça agora!
+Últimos artigos
+
+Notícias
+Confira os locais de prova no Cartão de Confirmação de Inscrição do Encceja 2023. Clique e...
+
+
+Notícias
+
+Geografia do Brasil
+Clique aqui, saiba qual é o clima da região Sul do Brasil, conheça suas características e...
+
+
+
+
+
+Institucional
+Quem Somos
+Anuncie
+Política de Privacidade
+Termos de Uso
+Fale Conosco
+Siga o Brasil Escola
+Facebook
+
+Instagram
+
+Twitter
+
+Youtube
+
+Copyright © 2023 Rede Omnia - Todos os direitos reservados. Proibida a reprodução total ou parcial sem prévia autorização (Inciso I do Artigo 29 Lei 9.610/98)
+
+
+
+Utiliz"
+
+Veja mais sobre "Handebol" em: https://brasilescola.uol.com.br/educacao-fisica/handebol.htm
 
 
   </footer>   
