--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <footer>
 <h1> imagem </h1>
-<h2>  resgra</h2>
+<h2>  curiozidades</h2>
 "O handebol foi criado em 1919, na Alemanha.
 
 O esporte estreou nas Olimpíadas em 1936, nos Jogos de Berlim.
@@ -27,11 +27,9 @@ O primeiro campeonato mundial de handebol ocorreu em 1938.
 
 Os países com maior tradição no handebol estão localizados na Europa.
 
-O Brasil foi campeão mundial de handebol feminino em 2013.
+O Brasil foi campeão mundial de handebol feminino em 2013
 
-Não pare agora... Tem mais depois da publicidade ;)
-
-História do handebol
+         História do handebol
 As atividades esportivas que envolvem jogos com bola são as mais antigas da humanidade. Entre os primeiros jogos semelhantes ao handebol, de que se tem conhecimento, estava a urânia, praticada na Grécia Antiga 2000 a.C., em que uma bola do tamanho de uma maçã era jogada com as mãos, mas sem a presença de traves no gol. A prática grega foi citada na obra Odisseia, de Homero.
 
 Já os romanos praticavam o haspartan, também jogado com as mãos, que utilizava uma bola feita de bexiga de boi, revestida de couro, conhecida como follis.
@@ -53,7 +51,7 @@ O gol no handebol mede dois metros de altura e três metros de largura (2 m x 3 
 
 A bola oficial para a prática do handebol deve ser de couro, e sua massa e tamanho variam conforme os gêneros: a masculina é uma bola maior, medindo entre 58 cm e 60 cm de diâmetro, com massa entre 425 g e 475 g. A feminina tem tamanho entre 54 cm e 56 cm, e massa entre 325 g e 400 g.
 
-Regras do handebol
+     regras do joga
 
 O goleiro é o único jogador que pode encostar o pé e a perna na bola durante uma partida de handebol. [2]
 Confira especificações gerais do funcionamento da prática esportiva do handebol a seguir:
@@ -76,7 +74,7 @@ São dois árbitros por jogo, auxiliados por um cronometrista e um secretário r
 
 O famoso tiro de sete metros é caracterizado pela falta sobre um atacante, quando ele, ao arremessar a bola ao gol, é impedido por uma falta. Para essa cobrança, o árbitro deve apitar, autorizando a jogada. O jogador que executa o tiro deve cuidar para que seus pés não toquem ou ultrapassem a linha de marcação dos sete metros.
 
-Elementos do handebol
+      Elementos do handebol
 Veja, a seguir, os elementos que compõem o handebol.
 
 Recepção: consiste em técnicas utilizadas para a retenção da bola de maneira correta em diversas situações de jogo. As mãos devem ir de encontro à bola para uma boa recepção. Os tipos de recepção são:
@@ -107,7 +105,7 @@ Arremessos especiais: são realizados no limite da área do gol em curta distân
 
 Progressão: consiste nas técnicas que visam a ganhar espaço no momento de posse de bola.
 
-Handebol adaptado
+       Handebol adaptado
 O handebol adaptado para cadeirantes teve início no Brasil em 1993, na Universidade Estadual de Campinas (Unicamp), por meio de um projeto de extensão universitário. O país é um dos principais responsáveis pelo início da prática adaptada desse esporte.
 
 A modalidade é semelhante à tradicional. A principal diferença é a altura da trave, reduzida para 1,60 m. O handebol adaptado apresenta contribuição significativa no desenvolvimento social e psicofísico de pessoas com deficiência física.
@@ -145,104 +143,9 @@ Créditos de imagem
 [2] Dziurek / Shutterstock
 
 [3] A.PAES / Shutterstock
-
- 
-
-Por Lucas Afonso
 Jornalista e profissional de Educação Física
 
 
-Escrito por : Lucas Afonso
-Escritor oficial Brasil Escola
-Gostaria de fazer a referência deste texto em um trabalho escolar ou acadêmico? Veja:
-
-AFONSO, Lucas. "Handebol"; Brasil Escola. Disponível em: https://brasilescola.uol.com.br/educacao-fisica/handebol.htm. Acesso em 14 de agosto de 2023.
-
-De estudante para estudante
-Mande sua pergunta
-
-Artigos Relacionados
-Basquetebol
-Você sabe como funciona o basquetebol? Clique aqui e conheça suas regras e fundamentos. Descubra como e quando surgiu essa prática esportiva.
-Educação Física
-Esporte e Saúde
-Motivos importantes para a prática da atividade física.
-Educação Física
-Esportes Olímpicos (1980-2010)
-Confira aqui a lista dos esportes olímpicos dos jogos de Moscou, em 1980, a Vancouver, em 2010.
-Educação Física
-Futebol Americano
-História e as regras do Futebol Americano.
-Educação Física
-História do Futebol
-Conheça a história do futebol. Veja como surgiu e sua chegada ao Brasil. Saiba como surgiu a Copa do Mundo, quais foram os primeiros estádios e muito mais!
-Educação Física
-Voleibol de Praia
-Histórico do voleibol de praia e regras oficiais.
-Educação Física
-Vôlei
-Clique para saber mais sobre o vôlei. Conheça quando surgiu o esporte, as regras, os fundamentos e o cenário do voleibol no Brasil.
-Educação Física
-
-Atualidades
-O que são big techs?
-Veja mais sobre essas empresas de tecnologia e inovação dominantes no mercado financeiro!
-Curiosidades
-Liberdade de imprensa
-Liberdade de imprensa é a liberdade de um cidadão de ter acesso a informações. Entenda!
-Curiosidades
-Cringe
-A gíria adaptada do inglês é usada para designar alguém que é visto como brega, vergonhoso, ultrapassado e fora de moda.
-Curiosidades
-Neurodiversidade
-Termo cunhado por Judy Singer, é usado para descrever a grande variedade de formas como a mente humana se comporta.
-Biologia
-PL das Fake News
-Conhecida também como PL2660, é um projeto de lei que estabelece mecanismos para a regulamentação das redes sociais no Brasil.
-Curiosidades
-PUBLICIDADE
-
-
-
-Sabia que a Iara pode avaliar sua redação? Envie agora mesmo!
-Conheça agora!
-Últimos artigos
-
-Notícias
-Confira os locais de prova no Cartão de Confirmação de Inscrição do Encceja 2023. Clique e...
-
-
-Notícias
-
-Geografia do Brasil
-Clique aqui, saiba qual é o clima da região Sul do Brasil, conheça suas características e...
-
-
-
-
-
-Institucional
-Quem Somos
-Anuncie
-Política de Privacidade
-Termos de Uso
-Fale Conosco
-Siga o Brasil Escola
-Facebook
-
-Instagram
-
-Twitter
-
-Youtube
-
-Copyright © 2023 Rede Omnia - Todos os direitos reservados. Proibida a reprodução total ou parcial sem prévia autorização (Inciso I do Artigo 29 Lei 9.610/98)
-
-
-
-Utiliz"
-
-Veja mais sobre "Handebol" em: https://brasilescola.uol.com.br/educacao-fisica/handebol.htm
 
 
   </footer>   
