--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ Os países com maior tradição no handebol estão localizados na Europa.
 
 O Brasil foi campeão mundial de handebol feminino em 2013
 
-         História do handebol
+ períodos de 30 minutos cada, com intervalo de 10 minutos.
+<h3>História do handebol
 As atividades esportivas que envolvem jogos com bola são as mais antigas da humanidade. Entre os primeiros jogos semelhantes ao handebol, de que se tem conhecimento, estava a urânia, praticada na Grécia Antiga 2000 a.C., em que uma bola do tamanho de uma maçã era jogada com as mãos, mas sem a presença de traves no gol. A prática grega foi citada na obra Odisseia, de Homero.
 
 Já os romanos praticavam o haspartan, também jogado com as mãos, que utilizava uma bola feita de bexiga de boi, revestida de couro, conhecida como follis.
@@ -41,8 +42,7 @@ Com a reformulação do jogo Torbal, o professor alemão Karl Schelenz criou o h
 O handebol se tornou esporte olímpico em 1934 com sua inclusão no Comitê Olímpico Internacional (COI). Sua estreia nas Olimpíadas aconteceu em Berlim, nos jogos de 1936, na modalidade masculina. Já a partida olímpica feminina iniciou-se em 1976, nos Jogos de Montreal, no Canadá.
 
 Fundamentos do handebol
-A partida é composta por dois períodos de 30 minutos cada, com intervalo de 10 minutos.
-
+A partida é composta por dois 
 São necessárias duas equipes de sete jogadores, sendo que um é o goleiro.
 
 Oficialmente, a quadra deve medir 40 metros de comprimento e 20 metros de largura (40 m x 20 m) e ter piso de madeira ou emborrachado, com duas áreas para goleiro que se localizam a seis metros do gol.
@@ -50,7 +50,7 @@ Oficialmente, a quadra deve medir 40 metros de comprimento e 20 metros de largur
 O gol no handebol mede dois metros de altura e três metros de largura (2 m x 3 m).
 
 A bola oficial para a prática do handebol deve ser de couro, e sua massa e tamanho variam conforme os gêneros: a masculina é uma bola maior, medindo entre 58 cm e 60 cm de diâmetro, com massa entre 425 g e 475 g. A feminina tem tamanho entre 54 cm e 56 cm, e massa entre 325 g e 400 g.
-
+</h3>
      regras do joga
 
 O goleiro é o único jogador que pode encostar o pé e a perna na bola durante uma partida de handebol. [2]
