--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head> 
 <body>
   <footer>
-<h1> imagem </h1>
+<img src="handboll.jpg" alt="">
 <h2>  curiozidades</h2>
 "O handebol foi criado em 1919, na Alemanha.
 
