--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylescss">
     <title>handebol</title>
 </head> 
 <body>
   <footer>
-<img src="handboll.jpg" alt="">
+<img class="foto" src="handboll.jpg" alt="">
 <h2>  curiozidades</h2>
 "O handebol foi criado em 1919, na Alemanha.
 
