--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>handebol</title>
+    <title>Handebol</title>
 </head> 
 <body>
   <footer>
 <img class="foto" src="handboll.jpg" alt="">
+<h1>Handebol</h1>
+
 <h2>  curiozidades</h2>
 "O handebol foi criado em 1919, na Alemanha.
 
