--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <div>
+    <div class="container">
       <img class="foto" src="handboll.jpg" alt="">
 
       <p>
@@ -41,7 +41,7 @@
     </div>
   </header>
 
-  < <h2> curiozidades</h2>
+   <h2> curiozidades</h2>
     <h3>História do handebol
       As atividades esportivas que envolvem jogos com bola são as mais antigas da humanidade. Entre os primeiros jogos
       semelhantes ao handebol, de que se tem conhecimento, estava a urânia, praticada na Grécia Antiga 2000 a.C., em
